fixing alignment issues

--- a/src/Sections/LifeAtXebia/Life.module.scss
+++ b/src/Sections/LifeAtXebia/Life.module.scss
@@ -3,6 +3,7 @@
   position: relative;
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: 100% 0;
   h1{
     font-size: 3.75rem;
     font-weight: bold;
@@ -10,7 +11,7 @@
     text-transform: capitalize;
     position: absolute;
     top: 15rem;
-    left: 6rem;
+    right: 6rem;
     font-weight: bold;
     color: #fff;
     text-transform: capitalize;
@@ -26,5 +27,5 @@
 
 .lifeContentWrapper{
   flex-direction: column;
-
+  margin-left: 10.5% !important;
 }
