--- a/src/Sections/Policy/Policy.module.scss
+++ b/src/Sections/Policy/Policy.module.scss
@@ -21,4 +21,5 @@
 
 .policyContentWrapper{
   flex-direction: column;
+  margin-right: 10.5% !important;
 }
